Require mission console content from markdown
Make mission code-panel hints and command references mandatory content sections so learner-facing mission text is sourced from markdown files and missing content fails fast instead of silently falling back to Java constants.